feat: improve s2s routes
